--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.13.2)
 project(Blatt2)
 
 set(CMAKE_CXX_STANDARD 99)
 
-add_executable(Blatt2
-        client.c
-        CMakeLists.txt
-        quotes.txt
-        server.c)
+add_executable(client
+        client.c)
+add_executable(server
+        server.c
+        quotes.txt)
